--- a/apps/account-cleaner/buildspec.yml
+++ b/apps/account-cleaner/buildspec.yml
@@ -9,4 +9,4 @@ phases:
       - echo "running aws-nuke against $ACCOUNT_ID"
       - # TODO: validate against list of known sandbox accounts, either here or in the step function itself
       - sed "s/REPLACE_ME/$ACCOUNT_ID/g" aws-nuke.template.yml > aws-nuke.yml
-      - ./aws-nuke nuke --no-dry-run --feature-flag filter-groups --config aws-nuke.yml --assume-role-arn "arn:aws:iam::$ACCOUNT_ID:role/aws-sandbox-accounts-aws-nuke" --force --force-sleep 3
+      - ./aws-nuke nuke --no-dry-run --config aws-nuke.yml --assume-role-arn "arn:aws:iam::$ACCOUNT_ID:role/aws-sandbox-accounts-aws-nuke" --force --force-sleep 3
