update nuke config

--- a/apps/account-cleaner/aws-nuke.template.yml
+++ b/apps/account-cleaner/aws-nuke.template.yml
@@ -74,6 +74,9 @@ presets:
         # horatio
         - type: glob
           value: "horatio-*"
+        # aws-accounts-lifecycle
+        - type: glob
+          value: aws-accounts-lifecyle-*
         # default-vpc-deleter
         - type: glob
           value: "default-vpc-deleter-*"
