--- a/apps/interface/Makefile
+++ b/apps/interface/Makefile
@@ -2,10 +2,14 @@
 venv:
 	poetry install
 
-.PHONY: server
-server:
+.PHONY: devserver
+devserver:
 	poetry run python manage.py runserver
 
 .PHONY: migrate
 migrate:
 	poetry run python manage.py migrate
+
+.PHONY: gunicorn
+gunicorn:
+	poetry run gunicorn aws_sandbox_accounts_interface.wsgi
