--- a/apps/interface/pyproject.toml
+++ b/apps/interface/pyproject.toml
@@ -13,6 +13,9 @@ django = "^5.1.3"
 gunicorn = "^23.0.0"
 
 
+[tool.poetry.group.dev.dependencies]
+python-lsp-server = "^1.12.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
