--- a/apps/interface/pyproject.toml
+++ b/apps/interface/pyproject.toml
@@ -11,6 +11,7 @@ package-mode = false
 python = "^3.12"
 django = "^5.1.3"
 gunicorn = "^23.0.0"
+boto3 = "^1.35.84"
 
 
 [tool.poetry.group.dev.dependencies]
