--- a/apps/interface/pyproject.toml
+++ b/apps/interface/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.12"
 django = "^5.1.3"
 gunicorn = "^23.0.0"
 boto3 = "^1.35.84"
+humanize = "^4.11.0"
 
 
 [tool.poetry.group.dev.dependencies]
