update nuke config

--- a/apps/account-cleaner/aws-nuke.template.yml
+++ b/apps/account-cleaner/aws-nuke.template.yml
@@ -126,6 +126,9 @@ presets:
         # don't delete budgets
         - property: Name
           value: budget
+        # don't delete dns
+        - property: Name
+          value: dns
       CloudTrailTrail:
         - audit-trail
       SNSTopic:
