deploy user pool

--- a/ci/codepipeline.yml
+++ b/ci/codepipeline.yml
@@ -139,6 +139,22 @@ Resources:
                 RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
                 TemplatePath: BuiltSource::common-resources/sandbox-administrator-account/pool-store/pool-store.yml
                 TemplateConfiguration: BuiltSource::common-resources/sandbox-administrator-account/pool-store/parameters/test.json
+            - ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Version: "1"
+                Provider: CloudFormation
+              InputArtifacts:
+                - Name: BuiltSource
+              RunOrder: 1
+              Name: User-Pool
+              Configuration:
+                ActionMode: REPLACE_ON_FAILURE
+                Capabilities: CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND
+                StackName: test-aws-sandbox-accounts-user-pool
+                RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
+                TemplatePath: BuiltSource::common-resources/sandbox-administrator-account/user-pool/user-pool.yml
+                TemplateConfiguration: BuiltSource::common-resources/sandbox-administrator-account/user-pool/parameters/test.json
         - Name: Deploy-Apps-To-Test
           Actions:
             - ActionTypeId:
@@ -255,6 +271,22 @@ Resources:
                 RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
                 TemplatePath: BuiltSource::common-resources/sandbox-administrator-account/pool-store/pool-store.yml
                 TemplateConfiguration: BuiltSource::common-resources/sandbox-administrator-account/pool-store/parameters/live.json
+            - ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Version: "1"
+                Provider: CloudFormation
+              InputArtifacts:
+                - Name: BuiltSource
+              RunOrder: 1
+              Name: User-Pool
+              Configuration:
+                ActionMode: REPLACE_ON_FAILURE
+                Capabilities: CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND
+                StackName: live-aws-sandbox-accounts-user-pool
+                RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
+                TemplatePath: BuiltSource::common-resources/sandbox-administrator-account/user-pool/user-pool.yml
+                TemplateConfiguration: BuiltSource::common-resources/sandbox-administrator-account/user-pool/parameters/live.json
         - Name: Deploy-Apps-To-Live
           Actions:
             - ActionTypeId:
