--- a/common-resources/sandbox-administrator-account/user-pool/user-pool.yml
+++ b/common-resources/sandbox-administrator-account/user-pool/user-pool.yml
@@ -32,3 +32,5 @@ Resources:
             - IsTest
             - "walter@cheste.rs"
             - "alex@cheste.rs"
+        - Key: ExportNamePrefix
+          Value: !Ref Environment
