--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,8 @@ phases:
       # install poetry
       - dnf install -y python3-pip
       - python3 -m pip install --user pipx
-      - /root/.local/bin/pipx install poetry==2.1.4
+      - export PATH=$PATH:/root/.local/bin
+      - pipx install poetry==2.1.4
       # db-client
       - cd apps/db-client
       - make test
