--- a/apps/auth-client/pyproject.toml
+++ b/apps/auth-client/pyproject.toml
@@ -1,16 +1,26 @@
-[tool.poetry]
+[project]
 name = "auth-client"
 version = "0.1.0"
-description = "auth client for aws-sandbox-accounts"
-authors = ["Alex Chesters <alex@cheste.rs>"]
-license = "MIT"
+description = ""
+authors = [
+    {name = "Alex Chesters",email = "alex@cheste.rs"}
+]
+license = {text = "MIT"}
+readme = "README.md"
+requires-python = ">=3.11,<3.12"
+dependencies = [
+    "boto3 (>=1.40.24,<2.0.0)",
+    "aws-lambda-powertools[tracer] (>=3.19.0,<4.0.0)"
+]
 
-[tool.poetry.dependencies]
-python = "^3.11"
-aws-lambda-powertools = {extras = ["tracer"], version = "^2.3.1"}
-pylint = "^3.2.4"
-boto3 = "^1.34.139"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.12.12"
+inquirer = "^3.4.1"
+
+[tool.poetry]
+package-mode = false
