--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,11 +19,8 @@ phases:
       - cd ../..
       # auth-client
       - cd apps/auth-client
-      # TODO: run tests (will need to handle installing dev dependencies)
-      - pip install -r requirements.prod.txt -t deps
-      - mkdir build
-      - cp -R deps/* build/
-      - cp -R auth_client/ build/
+      - make test
+      - make package
       - aws cloudformation package --template-file stacks/sandbox-administrator-account/auth-client.yml --s3-bucket $ARTIFACTS_BUCKET --s3-prefix artifacts/aws-sandbox-accounts/apps/auth-client --output-template-file stacks/sandbox-administrator-account/auth-client.yml
       - cd ../..
 artifacts:
