--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ phases:
   install:
     runtime-versions:
       python: 3.11
+      nodejs: 22
   build:
     commands:
       # install poetry
@@ -23,5 +24,9 @@ phases:
       - make package
       - aws cloudformation package --template-file stacks/sandbox-administrator-account/auth-client.yml --s3-bucket $ARTIFACTS_BUCKET --s3-prefix artifacts/aws-sandbox-accounts/apps/auth-client --output-template-file stacks/sandbox-administrator-account/auth-client.yml
       - cd ../..
+      # interface
+      - cd apps/interface
+      - npm ci
+      - npm run build
 artifacts:
   files: "**/*"
