--- a/apps/interface/package.json
+++ b/apps/interface/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@eslint/js": "^9.35.0",
     "@react-router/dev": "^7.7.1",
+    "@stylistic/eslint-plugin": "^5.3.1",
     "@tailwindcss/vite": "^4.1.4",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
