--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,8 @@
 				"docker.docker",
 				"charliermarsh.ruff",
 				"kddejong.vscode-cfn-lint",
-				"tamasfe.even-better-toml"
+				"tamasfe.even-better-toml",
+				"dbaeumer.vscode-eslint"
 			]
 		}
 	}
