--- a/apps/interface/package.json
+++ b/apps/interface/package.json
@@ -7,7 +7,7 @@
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
-    "lint": "npx eslint app",
+    "lint": "npx eslint app --fix",
     "test": "npm run lint"
   },
   "dependencies": {
