--- a/apps/interface/stacks/sandbox-administrator-account/interface.yml
+++ b/apps/interface/stacks/sandbox-administrator-account/interface.yml
@@ -57,3 +57,31 @@ Resources:
         IgnorePublicAcls: true
         BlockPublicPolicy: true
         RestrictPublicBuckets: true
+  OAC:
+    Type: AWS::CloudFront::OriginAccessControl
+    Properties:
+      OriginAccessControlConfig:
+        Name: !Sub "${Environment}-aws-sandbox-accounts-interface-oac"
+        Description: OAC for CloudFront to S3
+        SigningBehavior: always
+        SigningProtocol: sigv4
+        OriginAccessControlOriginType: s3
+  CachePolicy:
+    Type: AWS::CloudFront::CachePolicy
+    Properties:
+      CachePolicyConfig:
+        Name: !Sub "${Environment}-aws-sandbox-accounts-interface-cache-policy"
+        DefaultTTL: 0
+        MaxTTL: 60
+        MinTTL: 0
+        ParametersInCacheKeyAndForwardedToOrigin:
+          EnableAcceptEncodingGzip: true
+          CookiesConfig:
+            CookieBehavior: none
+          HeadersConfig:
+            HeaderBehavior: whitelist
+            Headers:
+              - Origin
+              - User-Agent
+          QueryStringsConfig:
+            QueryStringBehavior: none
